[package]
name = "sanctuary-signer"
version = "0.1.0"
edition = "2021"
description = "Quantum-resistant wallet using CRYSTALS-Dilithium for Sanctuary Protocol"
license = "MIT"

[dependencies]
# Wrapper Rust untuk Dilithium (PQC)
pqcrypto-dilithium = "0.5.0"
pqcrypto-traits = "0.3.5"
# Untuk serialisasi data (agar bisa dikirim ke blockchain)
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
# Untuk testing
